<resources>
    <string name="app_name">Aplicativo Paroquia</string>

    <string name="action_buscar">Procurar</string>
    <string name="action_sair">Sair</string>
    <string name="action_adicionar">Adicionar</string>
    <string name="action_config">Configurações</string>
    <string name="action_share">Compartilhar</string>
    <string name="title_activity_alterar_cadastro">AlterarCadastro</string>
</resources>
