<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/action_buscar"
        android:icon="@drawable/ic_buscar_black"
        android:title="@string/action_buscar"
        app:showAsAction="always"
        app:actionViewClass="android.support.v7.widget.SearchView"/>
    <item android:id="@+id/action_share"
        android:icon="@drawable/ic_share_black"
        android:title="@string/action_share"
        app:showAsAction="always"
        app:actionProviderClass="android.support.v7.widget.ShareActionProvider"/>
    <item android:id="@+id/action_adicionar"
        android:icon="@drawable/ic_adicionar_black"
        android:title="@string/action_adicionar"
        app:showAsAction="ifRoom" />
    <item android:id="@+id/action_map"
        android:title="Localização"
        app:showAsAction="never" />
    <item android:id="@+id/action_config"
        android:title="@string/action_config"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_sair"
        android:title="@string/action_sair"
        app:showAsAction="never" />
</menu>